# llm-wrapper

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0268bdc69c35_initial_migration.py  2c9b3a85879d_active_column_for_file.py  3a00f25f33db_initial_migration.py  77358310f9a6_new_file_table.py  cf240e2333a9_initial_migration.py  d996c6a84e59_save_dataframe_to_file.py  eea4f4c59f0f_initial_migration.py
app/: asgi.py  custom_pipelines.py  database.py  db_models.py  llm_strategies.py  logger.py  schemas.py  setup.py  utils.py
app/models/: LLMAgent.py  Llm.py  llm_strategies.py
app/routes/: conversation.py  file.py  llm.py  prompt.py
app/services/: agent.py  conversation.py  file.py  llm.py  prompt.py
app/templates/: custom_generate_python_code.tmpl  custom_generate_python_code_with_sql.tmpl
app/templates/shared/: output_type_template.tmpl
scripts/: run_app.sh  set_env_vars.sh
